--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:47:23=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:48:59=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2000.63</p>
+                <p id="net-worth">1995.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-391.75</p>
+                <p id="unrealized-pl-value">-397.25</p>
             </div>
         </div>
     </header>
@@ -112,19 +112,20 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17323.0
+SellLimit: 17323.5
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MNQM24==P/L:11.5</h2>
+SellLimit: 17323.5
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24==P/L:-87.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-68.75</h2>
+            <h2 id="column4-title">M2KM24==P/L:-317.0</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-320.5</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
