--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==10:08:41=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==10:10:14=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1951.63</p>
+                <p id="net-worth">1939.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-458.25</p>
+                <p id="unrealized-pl-value">-471.50</p>
             </div>
         </div>
     </header>
@@ -111,16 +111,16 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-65.0</h2>
-
+            <h2 id="column1-title">{{COLUMN1_TITLE}}</h2>
+            <p id="stocks-content-1d">{{stocks-content-1}}</p>
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-76.25</h2>
-
+            <h2 id="column2-title">{{COLUMN2_TITLE}}</h2>
+            <p id="stocks-content-2d">{{stocks-content-2}}</p>
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-308.5</h2>
-
+            <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
+            <p id="stocks-content-3d">{{stocks-content-3}}</p>
         </div>
         <div class="column">
             <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
