--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==10:52:48=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==10:54:22=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1804.13</p>
+                <p id="net-worth">1805.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-605.75</p>
+                <p id="unrealized-pl-value">-604.75</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-285.0</h2>
-BuyLimit: 5013.75
+            <h2 id="column1-title">MNQM24==P/L:-279.0</h2>
+SellLimit: 5022.0
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:0.0</h2>
-BuyLimit: 5013.75
+            <h2 id="column2-title">MESM24</h2>
+SellLimit: 5022.0
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-324.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-330.0</h2>
 
         </div>
         <div class="column">
