--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==12:10:51=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==12:12:26=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1997.38</p>
+                <p id="net-worth">1989.38</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-414.50</p>
+                <p id="unrealized-pl-value">-422.50</p>
             </div>
         </div>
     </header>
@@ -111,21 +111,20 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-138.0</h2>
---LIST OF TRADE(3)--
-MNQM24
-        </div>
-        <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:-121.0</h2>
+            <h2 id="column1-title">MNQM24==P/L:-122.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24</h2>
+            <h2 id="column2-title">MESM24</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-303.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-298.0</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
