--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==12:33:03=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==12:34:39=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1945.38</p>
+                <p id="net-worth">1956.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-466.50</p>
+                <p id="unrealized-pl-value">-455.00</p>
             </div>
         </div>
     </header>
@@ -111,20 +111,21 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-164.0</h2>
+            <h2 id="column1-title">MNQM24==P/L:-157.0</h2>
 SellLimit: 5027.5
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 SellLimit: 5027.5
+BuyLimit: 5028.0
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-304.0</h2>
+            <h2 id="column3-title">MESM24==P/L:1.25</h2>
+BuyLimit: 5028.0
+        </div>
+        <div class="column">
+            <h2 id="column4-title">M2KM24==P/L:-296.5</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
