--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==12:36:28=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==12:38:04=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1969.88</p>
+                <p id="net-worth">1966.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+41.75</p>
+                <p id="realized-pl-value">+41.25</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-441.00</p>
+                <p id="unrealized-pl-value">-443.50</p>
             </div>
         </div>
     </header>
@@ -111,20 +111,20 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-149.0</h2>
-SellLimit: 5027.5
-        </div>
-        <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-SellLimit: 5027.5
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-2.5</h2>
+            <h2 id="column1-title">MNQM24==P/L:-140.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-294.5</h2>
+            <h2 id="column2-title">MESM24==P/L:-8.75</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column3-title">M2KM24==P/L:-292.5</h2>
+
+        </div>
+        <div class="column">
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
