--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==13:24:41=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==13:26:14=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2071.13</p>
+                <p id="net-worth">2076.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-339.25</p>
+                <p id="unrealized-pl-value">-333.50</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-5.0</h2>
+            <h2 id="column1-title">MNQM24==P/L:10.5</h2>
+SellLimit: 17325.5
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MESM24==P/L:-103.75=====0.78</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-95.0</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-250.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-245.0</h2>
 
         </div>
         <div class="column">
