--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==13:59:23=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:01:07=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2002.88</p>
+                <p id="net-worth">2001.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-417.50</p>
+                <p id="unrealized-pl-value">-418.75</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 BuyLimit: 17268.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-198.75=====0.78</h2>
+            <h2 id="column2-title">MESM24==P/L:-190.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-220.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-221.0</h2>
 
         </div>
         <div class="column">
