--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:12:30=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:14:10=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1991.38</p>
+                <p id="net-worth">1992.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-429.00</p>
+                <p id="unrealized-pl-value">-427.50</p>
             </div>
         </div>
     </header>
@@ -115,7 +115,7 @@
 BuyLimit: 17268.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-211.25=====0.78</h2>
+            <h2 id="column2-title">MESM24==P/L:-212.5</h2>
 
         </div>
         <div class="column">
