--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:17:22=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:19:13=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1983.63</p>
+                <p id="net-worth">1979.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-436.75</p>
+                <p id="unrealized-pl-value">-441.25</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 BuyLimit: 17268.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-213.75=====0.78</h2>
+            <h2 id="column2-title">MESM24==P/L:-225.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-217.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-213.5</h2>
 
         </div>
         <div class="column">
