--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:00:52=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:02:12=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2020.13</p>
+                <p id="net-worth">2020.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-400.25</p>
+                <p id="unrealized-pl-value">-399.50</p>
             </div>
         </div>
     </header>
@@ -115,7 +115,7 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-183.75=====0.78</h2>
+            <h2 id="column2-title">MESM24==P/L:-177.5</h2>
 
         </div>
         <div class="column">
