--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:06:13=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:07:33=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2027.38</p>
+                <p id="net-worth">2030.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-393.00</p>
+                <p id="unrealized-pl-value">-389.75</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-177.5</h2>
+            <h2 id="column2-title">MESM24==P/L:-173.75=====0.13</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-219.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-220.5</h2>
 
         </div>
         <div class="column">
