--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:11:51=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:13:11=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2025.88</p>
+                <p id="net-worth">2020.38</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-394.50</p>
+                <p id="unrealized-pl-value">-400.00</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-172.5</h2>
+            <h2 id="column2-title">MESM24==P/L:-176.25=====0.13</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-221.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-220.5</h2>
 
         </div>
         <div class="column">
