--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:28:59=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:30:37=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2031.38</p>
+                <p id="net-worth">2034.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-389.00</p>
+                <p id="unrealized-pl-value">-385.75</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-156.25=====0.52</h2>
+            <h2 id="column2-title">MESM24==P/L:-150.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-236.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-238.0</h2>
 
         </div>
         <div class="column">
