--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:48:32=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:50:06=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2050.38</p>
+                <p id="net-worth">2054.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-370.00</p>
+                <p id="unrealized-pl-value">-365.75</p>
             </div>
         </div>
     </header>
@@ -112,19 +112,19 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17373.5
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MNQM24==P/L:-5.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-136.25=====0.52</h2>
+            <h2 id="column3-title">MESM24==P/L:-110.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-243.5</h2>
+            <h2 id="column4-title">M2KM24==P/L:-249.5</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
