--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==16:33:17=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==16:34:47=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1934.63</p>
+                <p id="net-worth">1932.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-346.75</p>
+                <p id="unrealized-pl-value">-348.50</p>
             </div>
         </div>
     </header>
@@ -112,21 +112,19 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
---LIST OF TRADE(3)--
---
+BuyLimit: 17343.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24</h2>
---LIST OF TRADE(3)--
---
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-101.25=====0.52</h2>
+            <h2 id="column2-title">MESM24==P/L:-107.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-243.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-243.0</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
